fix render welcome

--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -11,7 +11,8 @@
               social_url: root_url %>
 <% end %>
 
-<%= render "welcome" %>
+<%= render "header", header: @header %>
+
 
 <main>
   <%= render "feeds" %>
