error with images assets

--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -2,19 +2,19 @@
 
   <div id="slideshow">
     <div>
-      <%= image_tag("image_header_1.jpeg", class: "", alt: 'Banner Agüimes') %>
+      <%= image_tag("image_header_1.jpg", class: "", alt: 'Banner Agüimes') %>
     </div>
     <div style="display: none;">
-      <%= image_tag("image_header_2.jpeg", class: "", alt: 'Banner Agüimes') %>
+      <%= image_tag("image_header_2.jpg", class: "", alt: 'Banner Agüimes') %>
     </div>
     <div style="display: none;">
-      <%= image_tag("image_header_3.jpeg", class: "", alt: 'Banner Agüimes') %>
+      <%= image_tag("image_header_3.jpg", class: "", alt: 'Banner Agüimes') %>
     </div>
     <div style="display: none;">
-      <%= image_tag("image_header_4.jpeg", class: "", alt: 'Banner Agüimes') %>
+      <%= image_tag("image_header_4.jpg", class: "", alt: 'Banner Agüimes') %>
     </div>
     <div style="display: none;">
-      <%= image_tag("image_header_5.jpeg", class: "", alt: 'Banner Agüimes') %>
+      <%= image_tag("image_header_5.jpg", class: "", alt: 'Banner Agüimes') %>
     </div>
   </div>
 
