--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -26,7 +26,7 @@
             <%= image_tag(image_path_for("logo_aguimes.jpg"), class: "float-left", alt: setting["org_name"]) %>
             <% end %>
             <h1 class="top-bar-subtitle">
-                  DecideAgüimes
+                  Decide Agüimes
             </h1>
         </div>
 
