--- a/app/views/custom/shared/_subnavigation.html.erb
+++ b/app/views/custom/shared/_subnavigation.html.erb
@@ -11,6 +11,15 @@
       </li>
     <% end %>
 
+    <% if feature?(:sdg) %>
+      <li>
+        <%= layout_menu_link_to t("layouts.header.sdg"),
+                                sdg_goals_path,
+                                controller_path == "sdg/goals" && action_name != "help",
+                                accesskey: "6" %>
+      </li>
+    <% end %>
+
     <% if feature?(:help_page) %>
       <li>
         <%= layout_menu_link_to t("layouts.header.help"),
