--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -15,19 +15,14 @@
 
 
 <main>
-  <%= render "feeds" %>
 
   <div class="row">
-    <% if @cards.any? %>
-      <div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
-        <h2 class="title"><%= t("welcome.cards.title") %></h2>
-
-        <%= render "shared/cards", cards: @cards %>
+      <div class="small-12 column <%= "large-6" %>">
+        <%= render "feeds" %>
       </div>
-    <% end %>
 
     <% if feed_processes_enabled? %>
-      <div class="small-12 large-4 column">
+      <div class="small-12 large-6 column">
         <%= render "processes" %>
       </div>
     <% end %>
