--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -256,3 +256,7 @@ p {
 /*************************************************/
 /* 07. Budgets page */
 /*************************************************/
+.map-image {
+  width: 675px;
+  height: 457px;
+}
