--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -20,7 +20,15 @@
       <div class="small-12 column <%= "large-8" %>">
         <%= render "feeds" %>
       </div>
+  </div>
+  <div class="row">
+    <% if @cards.any? %>
+      <div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
+        <h2 class="title"><%= t("welcome.cards.title") %></h2>
 
+        <%= render "shared/cards", cards: @cards %>
+      </div>
+    <% end %>
   </div>
 
   <% if feature?("user.recommendations") && (@recommended_debates.present? || @recommended_proposals.present?) %>
